--- a/particle-bg/index.html
+++ b/particle-bg/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Particles</title>
     <link rel="stylesheet" href="style.css" />
+    <style></style>
   </head>
   <body>
     <canvas id="canvas1"></canvas>
