--- a/smooth-scroll/index.html
+++ b/smooth-scroll/index.html
@@ -10,6 +10,7 @@
         padding: 0;
         box-sizing: border-box;
         font-family: Verdana, sans-serif;
+        transition: transform 0.5s cubic-bezier(0.37, 0, 0.63, 1);
       }
 
       .box {
