countdown js added

--- a/counter/index.html
+++ b/counter/index.html
@@ -19,6 +19,12 @@
             <input type="number" value="5">
             <button data-action="increase">+</button>
         </div>
+
+        <div class="new">
+            <a class="links" href="javascript:void(0)" data-id="1" data-age="20" data-rollno="101">new</a>
+            <a class="links" href="javascript:void(0)" data-id="2" data-age="30" data-rollno="102">new2</a>
+            <a class="links" href="javascript:void(0)" data-id="3" data-age="40" data-rollno="103">new3</a>
+        </div>
     </body>
 
 
