smtp added properly

--- a/counter/index.html
+++ b/counter/index.html
@@ -11,7 +11,8 @@
         <button type="text" value="-" id="minus">-</button>
         <input type="number" id="number" value="5">
         <button type="text" value="+" id="plus">+</button>
-    </body> -->
+        </body>
+    -->
 
     <body>
         <div id="counter">
