to do list added

--- a/todo/index.html
+++ b/todo/index.html
@@ -24,24 +24,24 @@
                 <ul class="" id="list-parent">
                     <div class="flex items-center justify-center gap-6 my-3 ">
                         <li class="list-disc">This is the first Element </li>
-                        <button id="" class="delete-btn"
-                            class="px-7 py-1 bg-teal-950 text-white border-2 border-inherit rounded-sm">Delete
+                        <button id=""
+                            class="delete-btn px-7 py-1 bg-teal-950 text-white border-2 border-inherit rounded-sm">Delete
                         </button>
                     </div>
                     <div class="flex items-center justify-center gap-6 my-3 ">
                         <li class="list-disc">This is the first Element </li>
-                        <button id="" class="delete-btn"
-                            class="px-7 py-1 bg-teal-950 text-white border-2 border-inherit rounded-sm">Delete</button>
+                        <button id=""
+                            class="delete-btn px-7 py-1 bg-teal-950 text-white border-2 border-inherit rounded-sm">Delete</button>
                     </div>
                     <div class="flex items-center justify-center gap-6 my-3 ">
                         <li class="list-disc">This is the first Element </li>
-                        <button id="" class="delete-btn"
-                            class="px-7 py-1 bg-teal-950 text-white border-2 border-inherit rounded-sm">Delete</button>
+                        <button id=""
+                            class="delete-btn px-7 py-1 bg-teal-950 text-white border-2 border-inherit rounded-sm">Delete</button>
                     </div>
                     <div class="flex items-center justify-center gap-6 my-3 ">
                         <li class="list-disc">This is the first Element </li>
-                        <button id="" class="delete-btn"
-                            class="px-7 py-1 bg-teal-950 text-white border-2 border-inherit rounded-sm">Delete</button>
+                        <button id=""
+                            class="delete-btn px-7 py-1 bg-teal-950 text-white border-2 border-inherit rounded-sm">Delete</button>
                     </div>
                 </ul>
             </div>
